# mcp-finance

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  setup.py
.cursor/: mcp.json.example
.github/workflows/: ci.yml
api/: __init__.py  main.py
scenarios/eval/: deposit_buy.json  fee_slippage.json  limit_fill_cross.json  reject_over_limit.json
scripts/: demo_scenario.py  run_eval.py
servers/: market_mcp.py  portfolio_mcp.py
tests/: bench_engine.py  test_agents.py  test_alerts.py  test_api.py  test_auth.py  test_backtest.py  test_eval_scenarios.py  test_events.py  test_ledger.py  test_ledger_fee_limit.py  test_mcp_smoke.py  test_ml_alpha_rigor.py  test_observability.py  test_partial_fills.py  test_pnl_slippage.py  test_pre_trade_and_snapshot.py  test_ratelimit.py  test_risk.py  test_risk_budget.py  test_yahoo_quote.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AgentPanel.tsx  AlertsPanel.tsx  ApiDisconnected.tsx  ApiKeyPanel.tsx  AuditTimeline.tsx  BacktestPanel.tsx  BrokerStatus.tsx  ComparisonPanel.tsx  EquityChart.tsx  ExecutionQualityPanel.tsx  FillsTable.tsx  Header.tsx  LoadingSkeleton.tsx  MetricsPanel.tsx  OrderEntryForm.tsx  OrderIntentsPanel.tsx  OrdersTable.tsx  PositionsTable.tsx  ReconciliationPanel.tsx  ReplaySlider.tsx  RiskPanel.tsx  ScenarioStudio.tsx  SignalFeed.tsx  StatCard.tsx  StrategyDashboard.tsx  StrategyPlayground.tsx
(+2 files in other folders)
